--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,7 @@ phases:
       - "yarn install --frozen-lockfile --production"
   build:
     commands:
+      - echo Build started on `Date`
       - "yarn build"
   post_build:
     commands:
