--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,18 +4,23 @@ phases:
     runtime-versions:
       nodejs: 12
     commands:
-      - "yarn global add gatsby"
+      - "touch .npmignore"
+      - "npm install -g gatsby"
   pre_build:
     commands:
-      - "yarn install --frozen-lockfile --production"
+      - "npm ci --production"
   build:
     commands:
-      - "yarn build"
+      - "npm run-script build"
   post_build:
     commands:
-      - "yarn deploy"
+      - "npm run-script deploy"
 artifacts:
   base-directory: public
   files:
     - "**/*"
-  discard-paths: yes
+  discard-paths: no
+cache:
+  paths:
+    - ".cache/*"
+    - "public/*"
